my-apps/knowledge/project-nomad/kiwix/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiwix
  namespace: project-nomad
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: vanillax.me
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "kiwix.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kiwix
          port: 8080
          weight: 1
